# sber-test-work

./: README.md  anti_bot_notes.txt  downloader.py  downloaders.py  handlers.py  main.py  pyproject.toml  requirements.txt  results_registry.csv  robotparser.py  schemas.py
src/: logger.py  main.py  robotparser.py
