[tool.poetry]
name = "sber-test-work"
version = "0.1.0"
description = ""
authors = ["Lunarskii <lunarskii0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
playwright = "^1.52.0"
pypdf = "^5.5.0"
langdetect = "^1.0.9"
beautifulsoup4 = "^4.13.4"
python-docx = "^1.1.2"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
